--- a/SomeChess/Components/Chessboard.razor
+++ b/SomeChess/Components/Chessboard.razor
@@ -89,12 +89,12 @@
                         </h1>
                         <div class="flex text-center flex-col ml-24 mt-5">
                             <div class="flex justify-between playOnline">
-                                <img @onclick="() => { PlayOnline = true; }" width="85" height="2" src="images/online-icon.png" class="selector cursor-pointer"/>
+                                <img @onclick="() => { PlayOnline = true; }" width="85" height="2" src="images/online-icon.png" class="selector cursor-pointer mt-2" />
                                 <button class="textInButton" @onclick="() => { PlayOnline = true; }">Play Online<br/><span>Play with a real person online!</span></button>
                             </div>
                             <div class="flex justify-between playComputer mt-5">
-                                <img width="80" height="2" src="images/computer-icon.png" class="selector cursor-pointer ml-1"/>
-                                <button class="textInButton">Computer<br/><span class="smalltextPlayComputer">Play vs training bots offline!</span></button>
+                                <img width="80" height="2" src="images/computer-icon.png" class="selector cursor-pointer ml-1 mt-1"/>
+                                <button class="textInButton">Computer<br/><span class="smalltextPlayComputer mt-0.5">Play vs training bots offline!</span></button>
                             </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                                 int thisi = i;
                                 <div class="flex movesNotationHolder">
                                     <div class="w-1/6">
-                                        <p @onclick="() => { ChessGame.ViewPosition(thisi); }" class="h-8 cursor-pointer select-none">
+                                        <p @onclick="() => { ChessGame.ViewPosition(thisi); }" class="h-8 cursor-pointer select-none selectedMove">
                                             @(moveNumber.ToString() + ". ")
                                             @if (@MoveHistory[i].Item1.PieceType == ChessPieceType.Pawn)
                                             {
@@ -316,11 +316,11 @@
                         </h1>
                         <div class="flex text-center flex-col ml-24 mt-5">
                             <div class="flex justify-between playOnline">
-                                <img @onclick="() => { PlayOnline = true; }" width="85" height="2" src="images/online-icon.png" class="selector cursor-pointer" />
+                                <img @onclick="() => { PlayOnline = true; }" width="85" height="2" src="images/online-icon.png" class="selector cursor-pointer mt-2" />
                                 <button class="textInButton" @onclick="() => { PlayOnline = true; }">Play Online<br /><span>Play with a real person online!</span></button>
                             </div>
                             <div class="flex justify-between playComputer mt-5">
-                                <img width="80" height="2" src="images/computer-icon.png" class="selector cursor-pointer ml-1" />
+                                <img width="80" height="2" src="images/computer-icon.png" class="selector cursor-pointer ml-1 mt-1" />
                                 <button class="textInButton">Computer<br /><span class="smalltextPlayComputer">Play vs training bots offline!</span></button>
                             </div>
                         </div>
@@ -730,7 +730,6 @@
                 StateHasChanged();
                 //await JsRuntime.InvokeVoidAsync("MovePiece", FromID, ToID);
             }
-            ChessGame.UpdateGameState();
         }
     }
 
