--- a/SomeChess/wwwroot/css/site.css
+++ b/SomeChess/wwwroot/css/site.css
@@ -299,3 +299,7 @@
         height: 80px;
         width: 80px;
     }
+.selectedMove {
+    background-color: aquamarine;
+    border-radius: 4px;
+}
