--- a/SomeChess/wwwroot/css/output.css
+++ b/SomeChess/wwwroot/css/output.css
@@ -604,6 +604,10 @@ video {
   margin-bottom: 0.25rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .ml-0 {
   margin-left: 0px;
 }
@@ -728,10 +732,6 @@ video {
   width: 0.25rem;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .w-1\/6 {
   width: 16.666667%;
 }
@@ -818,6 +818,10 @@ video {
   justify-content: space-evenly;
 }
 
+.justify-self-start {
+  justify-self: start;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -856,6 +860,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-start {
+  text-align: start;
 }
 
 .text-3xl {
@@ -959,9 +967,9 @@ video {
 }
 
 :root {
-  --BackgroundColor: #283739;
-  --SecondBackgroundColor: #2c5d63;
-  --HoverColor: #a2c11c;
+  --BackgroundColor: #302e2b;
+  --SecondBackgroundColor: #21201e;
+  --HoverColor: #3c3b39;
   --TextColor: #d3d3d3;
 }
 
@@ -1006,17 +1014,20 @@ video {
 /*buttons*/
 
 .playOnline {
+  transition: all 0.4s;
   border-style: solid;
   height: 10vh;
   width: 400px;
   border-radius: 15px;
   font-size: 250%;
   color: white;
-  background-color: #93c75e;
+  background-color: #80b54c;
 }
 
 .playOnline:hover {
-  background-color: #72c21f;
+  transition: all 0.4s;
+  background-color: #98c66c;
+  box-shadow: 1px 1px 2px #98c66c;
 }
 
 .playOnline span {
@@ -1026,13 +1037,14 @@ video {
 }
 
 .playComputer {
+  transition: all 0.4s;
   border-style: solid;
   height: 10vh;
   width: 400px;
   border-radius: 15px;
   font-size: 250%;
   color: white;
-  background-color: #696969;
+  background-color: #403e3c;
 }
 
 .playComputer span {
@@ -1041,7 +1053,9 @@ video {
 }
 
 .playComputer:hover {
-  background-color: #636363;
+  transition: all 0.4s;
+  background-color: #767373;
+  box-shadow: 1px 1px 2px #767373;
 }
 
 .textInButton {
@@ -1060,7 +1074,7 @@ video {
 
 .greengradient {
   font-size: 400%;
-  background-image: linear-gradient(to right, rgb(182, 244, 146), rgb(51, 139, 147));
+  background-color: var(--TextColor);
   -webkit-background-clip: text;
   color: transparent;
 }
@@ -1076,14 +1090,15 @@ video {
   border-radius: 10px;
   width: 30vw;
   height: 68vh;
+  border: solid;
 }
 
 .chooseTime {
   background-color: var(--SecondBackgroundColor);
   display: flex;
   position: absolute;
-  margin-left: 54.2vw;
-  width: 30vw;
+  margin-left: 54.5vw;
+  width: 28vw;
   border-radius: 10px;
   height: 60vh;
   margin-top: -67vh;
@@ -1091,7 +1106,7 @@ video {
 
 .chooseTime span {
   color: rgb(242, 84, 84);
-  margin-left: 28.5vw;
+  margin-left: 28vw;
   cursor: pointer;
 }
 
@@ -1100,16 +1115,15 @@ video {
 }
 
 .chooseTime button {
+  transition: all 0.15s;
   background-color: var(--HoverColor);
   width: 6vw;
   border-radius: 5px;
 }
 
 .chooseTime button:hover {
-  transition-duration: 0.15s;
-  transition-property: all;
-  transition-timing-function: ease-in-out;
-  box-shadow: 0 0 15px #72c21f;
+  transition: all 0.15s;
+  box-shadow: 0 0 15px #767373;
 }
 
 .selectedTimeShadow {
@@ -1217,26 +1231,26 @@ video {
 }
 
 .movesNotationHolder:nth-child(even) {
-  background-color: #2c5d63;
+  background-color: var(--BackgroundColor);
 }
 
 .movesNotationHolder:nth-child(odd) {
-  background-color: rgb(25, 113, 74);
+  background-color: var(--SecondBackgroundColor);
 }
 
 .drawButton {
   color: white;
-  transition: all 0.7s;
   width: 5vw;
   font-size: 125%;
-  background-color: rgb(85, 165, 146);
+  transition: all 0.4s;
+  background-color: #80b54c;
   border-radius: 4px;
 }
 
 .drawButton:hover {
-  transition: all 0.5s;
-  color: white;
-  background-color: rgb(113, 180, 132);
+  transition: all 0.4s;
+  background-color: #98c66c;
+  box-shadow: 1px 1px 2px #98c66c;
 }
 
 .giveUpButton {
@@ -1244,14 +1258,15 @@ video {
   color: white;
   width: 5vw;
   font-size: 125%;
-  background-color: rgb(85, 165, 146);
+  transition: all 0.4s;
+  background-color: #80b54c;
   border-radius: 4px;
 }
 
 .giveUpButton:hover {
-  transition: all 0.5s;
-  color: white;
-  background-color: rgb(113, 180, 132);
+  transition: all 0.4s;
+  background-color: #98c66c;
+  box-shadow: 1px 1px 2px #98c66c;
 }
 
 .minusmargintop {
@@ -1264,6 +1279,20 @@ img {
 }
 
 .selectedMove {
-  background-color: aquamarine;
+  background-color: rgb(69, 68, 65);
   border-radius: 4px;
+}
+
+.playButton a {
+  box-shadow: none;
+  transition: all 0.4s;
+  background-color: #80b54c;
+  border-radius: 4px;
+  color: white;
+}
+
+.playButton a:hover {
+  transition: all 0.4s;
+  background-color: #98c66c;
+  box-shadow: 1px 1px 2px #98c66c;
 }
