--- a/SomeChess/wwwroot/css/site.css
+++ b/SomeChess/wwwroot/css/site.css
@@ -40,9 +40,9 @@
 }
 
 :root {
-    --BackgroundColor: #283739;
-    --SecondBackgroundColor: #2c5d63;
-    --HoverColor: #a2c11c;
+    --BackgroundColor: #302e2b;
+    --SecondBackgroundColor: #21201e;
+    --HoverColor: #3c3b39;
     --TextColor: #d3d3d3;
 }
 .chessboard {
@@ -81,16 +81,19 @@
 
 /*buttons*/
 .playOnline {
+    transition: all 0.4s;
     border-style: solid;
     height: 10vh;
     width: 400px;
     border-radius: 15px;
     font-size: 250%;
     color: white;
-    background-color: #93c75e;
+    background-color: #80b54c;
 }
     .playOnline:hover {
-        background-color: #72c21f;
+        transition: all 0.4s;
+        background-color: #98c66c;
+        box-shadow: 1px 1px 2px #98c66c;
     }
 .playOnline span {
     margin-top: -9.5vh;
@@ -98,21 +101,23 @@
     font-size: 50%;
 }
 .playComputer {
+    transition: all 0.4s;
     border-style: solid;
     height: 10vh;
     width: 400px;
     border-radius: 15px;
     font-size: 250%;
     color: white;
-    background-color: #696969;
+    background-color: #403e3c;
 }
 .playComputer span {
         margin-top: -9.5vh;
         font-size: 50%;
     }
     .playComputer:hover {
-        background-color: #636363;
-        
+        transition: all 0.4s;
+        background-color: #767373;
+        box-shadow: 1px 1px 2px #767373;
     }
 .textInButton {
     width: 310px;
@@ -129,7 +134,7 @@
 
 .greengradient {
     font-size: 400%;
-    background-image: linear-gradient(to right, rgb(182, 244, 146), rgb(51, 139, 147));
+    background-color: var(--TextColor);
     -webkit-background-clip: text;
     color: transparent;
 }
@@ -143,35 +148,35 @@
     border-radius: 10px;
     width: 30vw;
     height: 68vh;
+    border: solid;
 }
 .chooseTime {
     background-color: var(--SecondBackgroundColor);
     display: flex;
     position: absolute;
-    margin-left: 54.2vw;
-    width: 30vw;
+    margin-left: 54.5vw;
+    width: 28vw;
     border-radius: 10px;
     height: 60vh;
     margin-top: -67vh;
 }
 .chooseTime span {
     color: rgb(242, 84, 84);
-    margin-left: 28.5vw;
+    margin-left: 28vw;
     cursor: pointer;
 }
 .chooseTime span:hover {
     color: rgb(243, 45, 45);
 }
-.chooseTime button {
-    background-color: var(--HoverColor);
-    width: 6vw;
-    border-radius: 5px;
-}
+    .chooseTime button {
+        transition: all 0.15s;
+        background-color: var(--HoverColor);
+        width: 6vw;
+        border-radius: 5px;
+    }
     .chooseTime button:hover {
-        transition-duration: 0.15s;
-        transition-property: all;
-        transition-timing-function: ease-in-out;
-        box-shadow: 0 0 15px #72c21f;
+        transition: all 0.15s;
+        box-shadow: 0 0 15px #767373;
     }
 .selectedTimeShadow {
     background-color: #32581f;
@@ -260,37 +265,38 @@
     color: white;
 } 
     .movesNotationHolder:nth-child(even) {
-        background-color: #2c5d63;
+        background-color: var(--BackgroundColor);
     }
 
     .movesNotationHolder:nth-child(odd) {
-        background-color: rgb(25, 113, 74);
+        background-color: var(--SecondBackgroundColor);
     }
 .drawButton {
     color: white;
-    transition: all 0.7s;
     width: 5vw;
     font-size: 125%;
-    background-color: rgb(85, 165, 146);
+    transition: all 0.4s;
+    background-color: #80b54c;
     border-radius: 4px;
 }
     .drawButton:hover {
-        transition: all 0.5s;
-        color: white;
-        background-color: rgb(113, 180, 132);
+        transition: all 0.4s;
+        background-color: #98c66c;
+        box-shadow: 1px 1px 2px #98c66c;
     }
 .giveUpButton {
     transition: all 0.7s;
     color: white;
     width: 5vw;
     font-size: 125%;
-    background-color: rgb(85, 165, 146);
+    transition: all 0.4s;
+    background-color: #80b54c;
     border-radius: 4px;
 }
     .giveUpButton:hover {
-        transition: all 0.5s;
-        color: white;
-        background-color: rgb(113, 180, 132);
+        transition: all 0.4s;
+        background-color: #98c66c;
+        box-shadow: 1px 1px 2px #98c66c;
     }
     .minusmargintop {
         margin-top: -6vh;
@@ -300,6 +306,19 @@
         width: 80px;
     }
 .selectedMove {
-    background-color: aquamarine;
+    background-color: rgb(69, 68, 65);
     border-radius: 4px;
 }
+.playButton a {
+    box-shadow: none;
+    transition: all 0.4s;
+    background-color: #80b54c;
+    border-radius: 4px;
+    color: white;
+}
+
+.playButton a:hover {
+        transition: all 0.4s;
+        background-color: #98c66c;
+        box-shadow: 1px 1px 2px #98c66c;
+    }
