--- a/SomeChess/wwwroot/css/output.css
+++ b/SomeChess/wwwroot/css/output.css
@@ -971,28 +971,13 @@ video {
   --SecondBackgroundColor: #21201e;
   --HoverColor: #3c3b39;
   --TextColor: #d3d3d3;
+  --Green: #80b54c;
 }
 
 .chessboard {
   display: grid;
   grid-template-columns: repeat(8, 80px);
   grid-template-rows: repeat(8, 80px);
-}
-
-.normalefiguren {
-  width: 70px;
-}
-
-.powns {
-  width: 50px;
-}
-
-.rook {
-  width: 60px;
-}
-
-.knight {
-  width: 65px;
 }
 
 .item {
@@ -1170,7 +1155,7 @@ video {
 }
 
 .gameOverDesign {
-  background-color: #2c5d63;
+  background-color: var(--BackgroundColor);
   color: white;
 }
 
@@ -1184,6 +1169,7 @@ video {
 }
 
 .gameOverDesign a {
+  transition: all 0.4s;
   font-size: 200%;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -1191,7 +1177,15 @@ video {
   cursor: pointer;
   border-radius: 5px;
   padding: 15px 15px;
-  background-color: #008080;
+  background-color: var(--Green);
+}
+
+.gameOverDesign a:hover {
+  transition: all 0.4s;
+  background-color: #98c66c;
+  border-color: #98c66c;
+  border-radius: 4px;
+  box-shadow: 1px 1px 2px 4px #98c66c;
 }
 
 .move-history {
@@ -1210,7 +1204,7 @@ video {
 }
 
 .peaceChoiceHolder {
-  background-color: #32581f;
+  background-color: var(--BackgroundColor);
 }
 
 .peaceChoiceHolder img {
@@ -1284,7 +1278,6 @@ img {
 }
 
 .playButton a {
-  box-shadow: none;
   transition: all 0.4s;
   background-color: #80b54c;
   border-radius: 4px;
@@ -1294,5 +1287,7 @@ img {
 .playButton a:hover {
   transition: all 0.4s;
   background-color: #98c66c;
-  box-shadow: 1px 1px 2px #98c66c;
+  border-color: #98c66c;
+  border-radius: 4px;
+  box-shadow: 1px 1px 2px 4px #98c66c;
 }
