something is wrong, but doing stuff further

--- a/SomeChess/Components/ChessField.razor
+++ b/SomeChess/Components/ChessField.razor
@@ -107,7 +107,7 @@
 
                 if (social.CurrentPlayer.PlayersMatch != 0)
                 {
-                    ChessMatch chessMatch = (ChessMatch)MatchSearching.GetInstance().GetMatchByID(social.CurrentPlayer.PlayersMatch);
+                    ChessMatch chessMatch = (ChessMatch)MatchSearching.GetInstance().GetChessMatchByID(social.CurrentPlayer.PlayersMatch);
 
 
                     //Chess? chess = (Chess?)chesses.FindChessGameById(chessMatch.GetGameID());
